Fixed Overflow in Code Editor

--- a/src/components/app.styl
+++ b/src/components/app.styl
@@ -131,3 +131,7 @@ img
 	border-radius 10px
 	-webkit-box-shadow inset 0 0 6px rgba(0,0,0,0.5)
 	background: alpha($theme.primary,0.8) !important
+
+.CodeEditorDialog + .CodeMirror
+	max-height calc(100vh - 140px) !important
+	height calc(100vh - 140px) !important
